fixed image upload on mobile device, set upload amount to max. 3,

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -14,5 +14,5 @@
 }
 
 .sapMUSProgressBox {
-    visibility: hidden;
+    /*visibility: hidden;*/
 }
